--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,8 @@ textarea {
 
 /*分页*/
 .page {
-  width: 500px;
+	width: 100%;
+  max-width: 500px;
   text-align: center;
   margin: 10px auto;
   height: 30px;
@@ -318,6 +319,7 @@ textarea {
 	border-radius: 5px 0px 0px 5px;
 	padding: 30px 0;
 	z-index: 1000;
+	display: none;
 }
 
 .rfloat-mobile img {
@@ -436,6 +438,162 @@ textarea {
 	right: 20px;
 }
 
+/* list for mobile */
+.list-box {
+    padding: 0 30px;
+    margin-bottom: 40px;
+    box-sizing: border-box;
+	display: none;
+}
+.list-mobile {
+    width: 100%;
+    background-color: #F2EEEA;
+    padding: 15px 0;
+    position: relative;
+    box-sizing: border-box;
+}
+.list-mobile h5 {
+    text-align: center;
+    font-size: 16px;
+    color: #2E1B15;
+}
+.brand-list h5 {
+	color: #C0271B;
+}
+.list-mobile img {
+    position: absolute;
+    right: 15px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+/* popup */
+.pop-up {
+	width: 100vw;
+	height: 100vh;
+	position: fixed;
+	top: 0;
+	left: 0;
+	display: none;
+}
+
+.pop-up>div {
+	width: 100%;
+	height: 100%;
+	position: relative;
+}
+
+.pop-up>div .bg {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0.6);
+}
+
+.pop-up>div .pop-up-box {
+	width: 80%;
+	height: 80vh;
+	position: absolute;
+	top: 50%;
+	left: 10%;
+	transform: translateY(-50%);
+	background-color: #fff;
+	overflow: auto;
+	box-sizing: border-box;
+	padding: 40px 20px;
+	transition: 0.3s;
+}
+
+.pop-up.p-brand .product {
+	width: 80%;
+	padding: 40px 20px;
+	position: absolute;
+	top: 50%;
+	left: 100vw;
+	transform: translateY(-50%);
+	box-sizing: border-box;
+	background-color: rgb(44,28,23);
+	transition: 0.3s;
+}
+
+.pop-up.p-brand .product .title-box {
+	width: 100%;
+	position: relative;
+	padding: 0 0 20px;
+	border-bottom: 1px solid #fff;
+}
+
+.pop-up.p-brand .product .title-box img {
+	position: absolute;
+	top: 5px;
+	left: 0;
+	width: 15px;
+}
+
+.pop-up.p-brand .product .title-box h5 {
+	color: rgb(138,137,138);
+	font-size: 24px;
+	text-align: center;
+}
+
+.pop-up.p-brand .product ul {
+	padding: 10px 0 0;
+}
+
+.pop-up.p-brand .product ul li {
+	margin-top: 20px;
+}
+
+.pop-up.p-brand .product ul li a {
+	font-size: 16px;
+	color: #fff;
+}
+
+.pop-up>div .pop-up-box h5 {
+	color: #2E1B15;
+	font-size: 17px;
+	text-align: center;
+	margin-bottom: 30px;
+}
+
+.pop-up.p-brand>div .pop-up-box h5 {
+	color: #C0271B;
+}
+
+.pop-up.p-brand>div .pop-up-box ul h4 {
+	color: #C0271B;
+	font-size: 17px;
+	margin-bottom: 15px;
+}
+
+.pop-up>div .pop-up-box ul li {
+	margin-bottom: 20px;
+	color: #a3a3a3;
+	font-size: 15px;
+}
+
+.pop-up.p-brand>div .pop-up-box ul li {
+	position: relative;
+	width: 100%;
+}
+
+.pop-up>div .pop-up-box ul li img {
+	position: absolute;
+	width: 13px;
+	right: 0;
+	top: 50%;
+	transform: translateY(-50%);
+}
+
+.pop-up>div .pop-up-box ul li a {
+	color: #a3a3a3;
+	font-size: 15px;
+	line-height: 1.3;
+	display: block;
+	height: auto;
+}
+
+
 @media screen and (max-width:1024px) {
 	.br-mobile {
 		display: block;
@@ -494,5 +652,11 @@ textarea {
 	}
 	.rfloat {
 		display: none;
+	}
+	.list-box {
+		display: block;
+	}
+	.rfloat-mobile {
+		display: block;
 	}
 }
