--- a/css/brand.css
+++ b/css/brand.css
@@ -1,9 +1,74 @@
 ﻿@charset "utf-8";
-img { border: 0px; }
-.bannerbox { width: 930px; height: 500px;  margin: 0px auto; }
-#focus { width: 930px; height: 500px; clear: both; overflow: hidden; position: relative; float: left; }
-#focus ul { width: 930px; height: 500px; float: left; position: absolute; clear: both; padding: 0px; margin: 0px; }
-#focus ul li { float: left; width: 930px; height: 500px; overflow: hidden; position: relative; padding: 0px; margin: 0px; }
-#focus .preNext { width: 465px; height: 500px; position: absolute; top: 0px; cursor: pointer; }
-#focus .pre { left: 10px; background:url(../images/prev.png) no-repeat left center; z-index:999}
-#focus .next { right:10px; background: url(../images/next.png) no-repeat right center;  z-index:999}
+img {
+  border: 0px;
+}
+.bannerbox {
+  width: 930px;
+  height: 500px;
+  margin: 0px auto;
+}
+#focus {
+  width: 100%;
+  max-width: 930px;
+  height: 500px;
+  clear: both;
+  overflow: hidden;
+  position: relative;
+  float: left;
+}
+#focus ul {
+    /* width: 100%; */
+    height: 100%;
+  float: left;
+  position: absolute;
+  clear: both;
+  padding: 0px;
+  margin: 0px;
+}
+#focus ul li {
+  float: left;
+  /* width: 100%; */
+  /* width: 100%; */
+  /* max-width: 930px; */
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+  padding: 0px;
+  margin: 0px;
+}
+#focus ul li a {
+    display: block;
+    width: 100%;
+}
+
+#focus ul li a div {
+    width: 100%;
+}
+#focus ul li img {
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+#focus .preNext {
+  width: 20%;
+  height: 500px;
+  position: absolute;
+  top: 0px;
+  cursor: pointer;
+}
+#focus .pre {
+  left: 10px;
+  background: url(../images/prev.png) no-repeat left center;
+  z-index: 999;
+}
+#focus .next {
+  right: 10px;
+  background: url(../images/next.png) no-repeat right center;
+  z-index: 999;
+}
+
+.sizeA {
+    
+}
